# data-management

./: .nojekyll  README.md  boundaries.html  cloud-native.html  exposure.html  faq.html  glossary.html  hazards.html  index.html  intro.html  phenology.html  search.json  structure.html
.github/workflows/: ghPageDeploy.yml
R/AtlasDataManageR/: DESCRIPTION  NAMESPACE
R/functions/: bucket_policy.r
docs/atlas_data-methods/: _quarto.yml  boundaries.qmd  cloud-native.qmd  exposure.qmd  hazards.qmd  index.qmd  intro.qmd  optimize_quarto.ts  phenology.qmd  structure.qmd
quarto/: README.md  optimize_quarto.ts
rust/batch_cog/: README.md
rust/cloud-convert/: Cargo.toml  README.md  build.sh  dockerfile
rust/cloud-convert/src/: batch_convert.rs  datainfo.rs  lib.rs  main.rs  rast_qaqc.rs  tif2cog.rs  vect2gpq.rs
rust/cloud-convert/tests/: test_batch-convert.rs  test_datainfo.rs  tif_to_cog.rs  vect_to_gpq.rs
rust/cloud-convert/tests/data/: test_input.gpkg  test_input.tif
rust/cloud-convert/tests/data/batch_data/: Cassava_Yield.tif  Soybean_Yield.tif  Wheat_Yield.tif  Yam_Yield.tif  gpkg_tst.gpkg  test.kml  watershed.dbf  watershed.shp  watershed.shx
site_libs/bootstrap/: bootstrap-52ae3592b14dbc2ae4d04665232253ed.min.css  bootstrap-7172840c6a218054d904aa5c9d21f65a.min.css  bootstrap-dark-8b4bece23370758619eeb05a415e1062.min.css  bootstrap-dark-f51d705a17accd020662ffcad65a690a.min.css  bootstrap-icons.css
site_libs/datatables-binding-0.33/: datatables.js
site_libs/datatables-css-0.0.0/: datatables-crosstalk.css
stac/: README.md  stac_root.py  stac_tools.py
(+21 files in other folders)
