[package]
name = "cloud-convert"
version = "0.1.0"
edition = "2024"

[dependencies]

gdal = { version = "0.18", features = ["bindgen"] }
rayon = "1.10.0"
clap = { version = "4.5", features = ["derive"] }
num-traits = { version = "0.2" }
polars = { version = "0.48", features = ["lazy", "parquet"] }
rand = "0.9"
walkdir = "2"
anyhow = "1.0"
